[package]
name = "khadas-led"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khadas-led-sdk = {path = "./khadas-led-sdk"}
prost = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"


[[bin]]
name = "khadas-led-server"
path = "src/server.rs"

[[bin]]
name = "khadas-led-client"
path = "src/client.rs"